voice rec stuff

--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,7 @@
 <script type="text/javascript" src="cordova.js"></script>
 <script src="assets/js/index.js"></script>
 <script src="assets/js/main.js"></script>
+<script src="assets/js/voiceRec.js"></script>
 
 <!-- CSS -->
 
@@ -36,6 +37,10 @@
 <!-- Body -->
 
 <body>
+
+	<button id="microphoneButton"><i class="fa fa-microphone"></i></button>
+	
+	<p id="microphoneError"></p>
 	
 	<p id="output"></p>
 	
