--- a/www/index.html
+++ b/www/index.html
@@ -44,7 +44,7 @@
 	
 	<p id="output"></p>
 	
-	<!--<input id="delayInput"></input>-->
+	<!--<input type="number" min="100" max="2000" placeholder="Delay between words (in milliseconds)" id="delayInput"></input>-->
 	
 </body>
 
