--- a/www/index.html
+++ b/www/index.html
@@ -45,7 +45,7 @@
 	
 	<p id="output"></p>
 	
-	<input type="range" min="100" max="2000" id="delayInput" class="slider" onmouseover="refreshDelay();"></input>
+	<input type="range" min="100" max="2000" id="delayInput" class="slider" onchange="refreshDelay();"></input>
 	
 	<p id="delayPreview"></p>
 	
