--- a/www/index.html
+++ b/www/index.html
@@ -49,6 +49,12 @@
 	
 	<p id="delayPreview"></p>
 	
+	<button id="delayUp" class="delayButton" onclick="delayUp();"><i class="fa fa-arrow-up"></i></button>
+	
+	<button id="delayDown" class="delayButton" onclick="delayDown();"><i class="fa fa-arrow-down"></i></button>
+	
+	<p id="delayTitle">Delay between words (in miliseconds)</p>
+	
 </body>
 
 
