--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <!-- JS -->
 
 <script src="assets/js/jquery-3.4.1.min.js"></script>
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
 <script src="assets/js/index.js"></script>
 <script src="assets/js/main.js"></script>
@@ -40,6 +41,8 @@
 <!-- Body -->
 
 <body>
+
+	<h1 id="titleHeader">Ultimate Speech Engine</h1>
 
 	<button id="microphoneButton"><i class="fa fa-microphone"></i></button>
 
@@ -74,6 +77,8 @@
 			<hr class="hr2"/>
 
 			<p id="textTranscriptOutput"></p>
+
+			<button id="closeTranscriptView" onclick="closeTranscriptView();"><i class="fa fa-times"></i></button>
 
 	</div>
 
