--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
 <!-- JS -->
 
 <script src="assets/js/jquery-3.4.1.min.js"></script>
-<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
 <script src="assets/js/index.js"></script>
 <script src="assets/js/main.js"></script>
@@ -42,7 +41,7 @@
 
 <body>
 
-	<h1 id="titleHeader">Ultimate Speech Engine</h1>
+	<h1 id="titleHeader">Ultimate Speech<br class="onlyOnMobile"/> Engine</h1>
 
 	<button id="microphoneButton"><i class="fa fa-microphone"></i></button>
 
@@ -52,7 +51,7 @@
 
 	<button id="menuButton" onclick="openMenu();"><i class="refButton fa fa-bars"></i></button>
 
-	<input id="textInput" type="text" onkeypress="enterTextInput(event);" onkeyup="updateTextInput(this);"></input>
+	<input id="textInput" type="text" onkeypress="enterTextInput(event);" onkeyup="updateTextInput(this);" placeholder="type here for text to speech..."></input>
 
 	<button id="transcriptButton" onclick="toggleTranscriptView();"><i class="refButton fa fa-scroll"></i></button>
 
