useful little thing

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 	<nav id="sideMenu">
 
-		<input type="range" min="100" max="2000" id="delayInput" class="slider" onchange="refreshDelay();"></input>
+		<input type="range" min="100" max="2000" id="delayInput" class="slider" oninput="refreshDelay();"></input>
 
 		<p id="delayPreview"></p>
 
